--- a/css/index.scss
+++ b/css/index.scss
@@ -509,6 +509,7 @@ position: relative;
     .image-container{
       margin-bottom:10px;
       width: 100%;
+      opacity: 50%;
       a{
         width: 100%;
         display:block;
