--- a/css/index.css
+++ b/css/index.css
@@ -17,10 +17,6 @@ a {
   text-decoration: none !important;
   color: #D66360; }
 
-.carousel {
-  max-height: 800px;
-  z-index: 0; }
-
 .navbar-default {
   text-align: center;
   background: transparent;
@@ -57,13 +53,29 @@ a {
 .navbar {
   position: absolute;
   border-radius: 0px;
-  opacity: 0.95; }
+  opacity: 0.95;
+  margin: 0 auto; }
 
 .container-fluid {
   margin-right: auto;
   margin-left: auto;
   width: 85%;
   max-height: 955px; }
+
+#nav.affix-top {
+  position: absolute;
+  background-color: transparent; }
+
+#nav.affix {
+  position: fixed;
+  background-color: #272731;
+  -webkit-transition: all .6s ease-in-out; }
+  #nav.affix .container-fluid #bs-example-navbar-collapse-1 .navbar-nav li.dropdown ul.dropdown-menu {
+    background-color: #272731; }
+
+.carousel {
+  max-height: 800px;
+  z-index: 0; }
 
 /*Slides*/
 .container {
@@ -342,11 +354,7 @@ a {
   text-align: center;
   z-index: 1;
   background-color: #F2F1ED;
-  position: relative;
-  /*width: 85%;
-  margin: 50px auto;
-  text-align:center;
-  z-index: 1;*/ }
+  position: relative; }
 
 .panels {
   padding-left: 0;
@@ -710,17 +718,6 @@ p, li {
   width: 100%;
   font-weight: 500;
   font-size: 20px; }
-
-#nav.affix-top {
-  position: absolute;
-  background-color: transparent; }
-
-#nav.affix {
-  position: fixed;
-  background-color: #272731;
-  -webkit-transition: all .6s ease-in-out; }
-  #nav.affix .container-fluid #bs-example-navbar-collapse-1 .navbar-nav li.dropdown ul.dropdown-menu {
-    background-color: #272731; }
 
 .icon, .social-icon {
   display: block;
