--- a/css/index.scss
+++ b/css/index.scss
@@ -35,6 +35,7 @@ $color-category-other: #676060;
   text-shadow: 0px 1px 1px rgba(1, 1, 1, 1);
   font-size: 70px;
   font-weight: 200;
+  font-family: $font-family-main !important;
 }
 
 .slides-container{
@@ -101,12 +102,16 @@ $color-category-other: #676060;
   a{
     display: inline-block;
     text-decoration: none;
-    opacity: 0.95;
+    opacity: 0.85;
+  }
+  a:hover{
+    opacity: 1;
   }
   h4{
     text-shadow: 0px 1px 1px #000;
     color: white;
     font-weight: 500;
+    font-family: $font-family-main !important;
   }
 }
 
@@ -388,8 +393,8 @@ position: relative;
 
 .panel{
   vertical-align: top;
-  min-width: 220px;
-  max-width: 335px;
+  min-width: 250px;
+  max-width: 300px;
   margin: 0 auto;
   padding: 0;
   float: none;
@@ -399,9 +404,9 @@ position: relative;
   margin-bottom: 10px;
   margin-right: 10px;
   border-radius: 0;
-  -webkit-box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.57) !important;
-  -moz-box-shadow:    0px 0px 15px 0px rgba(0, 0, 0, 0.57) !important;
-  box-shadow:         0px 0px 15px 0px rgba(0, 0, 0, 0.57) !important;
+  -webkit-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.25) !important;
+  -moz-box-shadow:    0px 0px 10px 0px rgba(0, 0, 0, 0.25) !important;
+  box-shadow:         0px 0px 10px 0px rgba(0, 0, 0, 0.25) !important;
   .panel-heading{
     border-radius: 0;
     text-align: center;
