--- a/css/project.scss
+++ b/css/project.scss
@@ -1,29 +1,100 @@
 @import 'common';
 
+body{
+  display: inline-block !important;
+  width: 100% !important;
+}
 
 #nav.affix{
   position: static;
 }
 
 .content-wrapper{
-  text-align: center;
-  margin: 0 auto;
-}
+  overflow:hidden;
+  margin:0 auto;
+  .leftPart{
+    height: 452px;
 
-.leftPart{
-  display: inline-block;
-  height: 500px;
-  background-color: yellow;
-}
+    background-color: #546451;
+      .profile-image{
+        height:270px;
+        min-width: 270px;
+        width: 60%;
+        margin: 0 auto;
+        margin-top:14%;
 
-.rightPart{
-  display: inline-block;
-  height: 500px;
-  background-color: red;
+        a{
+          display:block;
+          height:100%;
+          max-width: 270px;
+          margin: 0 auto;
+
+          img{
+            height: 100%;
+            width: 80%;
+            max-width: 270px;
+            max-height: 270px;
+            min-width: 270px;
+            min-height: 270px;
+            display: block;
+            margin: 0 auto;
+          }
+        }
+
+      }
+    .author-name{
+
+    }
+    .user-action-buttons{
+
+    }
+    .team-header{
+
+    }
+    .team-specs{
+      p{
+
+      }
+    }
+  }
+
+  .rightPart{
+    background-color: #766162;
+
+    .project-name{
+      margin: 25px 0px 0px 0px;
+      font-size: 24px;
+      font-family: $font-family-main;
+      text-align:center;
+    }
+    .project-info{
+      .basic-info{
+        width: 50%;
+        margin: 25px auto 0px auto;
+        p{
+          text-align: left;
+        }
+
+        .attachments{
+
+        }
+        .links{
+
+        }
+        .media{
+
+        }
+      }
+    }
+    .comments{
+
+    }
+  }
+  clear:both;
 }
 
 .footer{
   display: inline-block;
-  background-color: blue;
+  background-color: #454753;
   height: 70px;
 }
