--- a/css/project.css
+++ b/css/project.css
@@ -85,7 +85,6 @@ body {
   margin: 0 auto;
   clear: both; }
   .content-wrapper .leftPart {
-    height: 452px;
     background-color: #546451; }
     .content-wrapper .leftPart .profile-image {
       height: 270px;
@@ -107,10 +106,76 @@ body {
           min-height: 270px;
           display: block;
           margin: 0 auto; }
+    .content-wrapper .leftPart .author-name {
+      margin: 20px auto;
+      font-size: 25px;
+      text-align: center;
+      font-family: "Raleway", sans-serif;
+      color: #AFA8A2; }
+    .content-wrapper .leftPart .user-action-buttons {
+      margin: 0px auto 20px auto; }
+      .content-wrapper .leftPart .user-action-buttons .btn-follow {
+        text-align: center;
+        margin-bottom: 20px; }
+      .content-wrapper .leftPart .user-action-buttons .action-buttons {
+        list-style-type: none;
+        text-align: center;
+        font-size: 20px;
+        display: inline-block;
+        width: 100%; }
+        .content-wrapper .leftPart .user-action-buttons .action-buttons li {
+          display: inline-block;
+          margin-left: 25px;
+          margin-right: 25px; }
+          .content-wrapper .leftPart .user-action-buttons .action-buttons li a {
+            color: #AFA8A2; }
+          .content-wrapper .leftPart .user-action-buttons .action-buttons li .fa-heart:hover {
+            color: #D66360; }
+          .content-wrapper .leftPart .user-action-buttons .action-buttons li .fa-star:hover {
+            color: #FFED5F; }
+          .content-wrapper .leftPart .user-action-buttons .action-buttons li .fa-eye:hover {
+            color: #67A3C0; }
+          .content-wrapper .leftPart .user-action-buttons .action-buttons li p {
+            margin: 0; }
+    .content-wrapper .leftPart .team-header {
+      text-align: center;
+      font-family: "Raleway", sans-serif;
+      color: #AFA8A2;
+      font-size: 22px;
+      margin: 50px auto 0px auto; }
+    .content-wrapper .leftPart .team-specs {
+      margin-bottom: 20px;
+      text-align: center; }
+      .content-wrapper .leftPart .team-specs .spec {
+        margin-top: 20px;
+        margin-bottom: 20px; }
+        .content-wrapper .leftPart .team-specs .spec .spec-container {
+          display: inline-block;
+          width: 100%;
+          text-align: center; }
+          .content-wrapper .leftPart .team-specs .spec .spec-container .spec-name {
+            max-width: 80%;
+            margin: 0;
+            display: inline-block;
+            border-radius: 20px;
+            color: white;
+            float: center; }
+          .content-wrapper .leftPart .team-specs .spec .spec-container .btn-apply {
+            display: inline-block;
+            float: center;
+            max-width: 46px;
+            margin-left: 10px;
+            color: white;
+            font-size: 20px;
+            padding-left: 15px;
+            padding-right: 15px;
+            border-radius: 50%; }
+    .content-wrapper .leftPart .team-count {
+      font-size: 20px; }
   .content-wrapper .rightPart {
     background-color: #766162; }
     .content-wrapper .rightPart .project-name {
-      margin: 25px 0px 0px 0px;
+      margin: 85px 0px 0px 0px;
       font-size: 24px;
       font-family: "Raleway", sans-serif;
       text-align: center; }
