--- a/css/common.css
+++ b/css/common.css
@@ -1,76 +1,55 @@
-html, body {
-  font-family: "Raleway", sans-serif !important;
-  font-size: 16px;
-  font-weight: 300 !important;
-  text-decoration: none !important;
-  -webkit-font-smoothing: antialiased !important;
-  background-color: #F2F1ED;
-  z-index: 2; }
+/*
+Error: Invalid CSS after "...erif !important": expected expression (e.g. 1px, bold), was ";"
+        on line 2 of common.css
 
-p, li {
-  color: #AFA8A2 !important; }
+1: html, body {
+2:   font-family: "Raleway", sans-serif !important;
+3:   font-size: 16px;
+4:   font-weight: 300 !important;
+5:   text-decoration: none !important;
+6:   -webkit-font-smoothing: antialiased !important;
+7:   background-color: #F2F1ED;
 
-p:hover, li:hover {
-  color: #333333 !important; }
-
-a {
-  text-decoration: none !important;
-  color: #D66360; }
-
-.navbar-default {
-  text-align: center;
-  background: transparent;
-  z-index: 10;
-  top: 0;
-  left: 0;
-  right: 0; }
-
-.dropdown-menu {
-  left: -35%;
-  text-align: center;
-  border-width: 0px;
-  background: transparent;
-  -webkit-box-shadow: none !important;
-  -moz-box-shadow: none !important;
-  box-shadow: none !important; }
-  .dropdown-menu li {
-    background: transparent; }
-    .dropdown-menu li a {
-      color: white;
-      font-family: "Raleway", sans-serif;
-      font-weight: 300; }
-  .dropdown-menu li:hover {
-    background: transparent; }
-    .dropdown-menu li:hover a {
-      color: #D66360;
-      background: transparent; }
-
-.navbar-default .navbar-nav > .open > a,
-.navbar-default .navbar-nav > .open > a:hover,
-.navbar-default .navbar-nav > .open > a:focus {
-  background-color: transparent; }
-
-.navbar {
-  position: absolute;
-  border-radius: 0px;
-  opacity: 0.95;
-  margin: 0 auto; }
-
-.container-fluid {
-  margin-right: auto;
-  margin-left: auto;
-  width: 85%;
-  max-height: 955px; }
-
-#nav.affix-top {
-  position: absolute;
-  background-color: transparent; }
-
-#nav.affix {
-  position: fixed;
-  background-color: #272731;
-  -webkit-transition: all .6s ease-in-out; }
-  #nav.affix .container-fluid #bs-example-navbar-collapse-1 .navbar-nav li.dropdown ul.dropdown-menu {
-    background-color: #272731; }
-
-/*# sourceMappingURL=common.css.map */
+Backtrace:
+common.css:2
+C:/Ruby22-x64/lib/ruby/gems/2.2.0/gems/sass-3.4.13/lib/sass/scss/parser.rb:1165:in `expected'
+C:/Ruby22-x64/lib/ruby/gems/2.2.0/gems/sass-3.4.13/lib/sass/script/lexer.rb:221:in `expected!'
+C:/Ruby22-x64/lib/ruby/gems/2.2.0/gems/sass-3.4.13/lib/sass/script/parser.rb:602:in `assert_done'
+C:/Ruby22-x64/lib/ruby/gems/2.2.0/gems/sass-3.4.13/lib/sass/script/parser.rb:63:in `parse'
+C:/Ruby22-x64/lib/ruby/gems/2.2.0/gems/sass-3.4.13/lib/sass/script/parser.rb:183:in `parse'
+C:/Ruby22-x64/lib/ruby/gems/2.2.0/gems/sass-3.4.13/lib/sass/script.rb:27:in `parse'
+C:/Ruby22-x64/lib/ruby/gems/2.2.0/gems/sass-3.4.13/lib/sass/engine.rb:1120:in `parse_script'
+C:/Ruby22-x64/lib/ruby/gems/2.2.0/gems/sass-3.4.13/lib/sass/engine.rb:710:in `parse_property'
+C:/Ruby22-x64/lib/ruby/gems/2.2.0/gems/sass-3.4.13/lib/sass/engine.rb:681:in `parse_property_or_rule'
+C:/Ruby22-x64/lib/ruby/gems/2.2.0/gems/sass-3.4.13/lib/sass/engine.rb:647:in `parse_line'
+C:/Ruby22-x64/lib/ruby/gems/2.2.0/gems/sass-3.4.13/lib/sass/engine.rb:525:in `build_tree'
+C:/Ruby22-x64/lib/ruby/gems/2.2.0/gems/sass-3.4.13/lib/sass/engine.rb:544:in `block in append_children'
+C:/Ruby22-x64/lib/ruby/gems/2.2.0/gems/sass-3.4.13/lib/sass/engine.rb:543:in `each'
+C:/Ruby22-x64/lib/ruby/gems/2.2.0/gems/sass-3.4.13/lib/sass/engine.rb:543:in `append_children'
+C:/Ruby22-x64/lib/ruby/gems/2.2.0/gems/sass-3.4.13/lib/sass/engine.rb:534:in `block in build_tree'
+C:/Ruby22-x64/lib/ruby/gems/2.2.0/gems/sass-3.4.13/lib/sass/engine.rb:527:in `each'
+C:/Ruby22-x64/lib/ruby/gems/2.2.0/gems/sass-3.4.13/lib/sass/engine.rb:527:in `build_tree'
+C:/Ruby22-x64/lib/ruby/gems/2.2.0/gems/sass-3.4.13/lib/sass/engine.rb:544:in `block in append_children'
+C:/Ruby22-x64/lib/ruby/gems/2.2.0/gems/sass-3.4.13/lib/sass/engine.rb:543:in `each'
+C:/Ruby22-x64/lib/ruby/gems/2.2.0/gems/sass-3.4.13/lib/sass/engine.rb:543:in `append_children'
+C:/Ruby22-x64/lib/ruby/gems/2.2.0/gems/sass-3.4.13/lib/sass/engine.rb:396:in `_to_tree'
+C:/Ruby22-x64/lib/ruby/gems/2.2.0/gems/sass-3.4.13/lib/sass/engine.rb:368:in `_render_with_sourcemap'
+C:/Ruby22-x64/lib/ruby/gems/2.2.0/gems/sass-3.4.13/lib/sass/engine.rb:285:in `render_with_sourcemap'
+C:/Ruby22-x64/lib/ruby/gems/2.2.0/gems/sass-3.4.13/lib/sass/plugin/compiler.rb:490:in `update_stylesheet'
+C:/Ruby22-x64/lib/ruby/gems/2.2.0/gems/sass-3.4.13/lib/sass/plugin/compiler.rb:215:in `block in update_stylesheets'
+C:/Ruby22-x64/lib/ruby/gems/2.2.0/gems/sass-3.4.13/lib/sass/plugin/compiler.rb:209:in `each'
+C:/Ruby22-x64/lib/ruby/gems/2.2.0/gems/sass-3.4.13/lib/sass/plugin/compiler.rb:209:in `update_stylesheets'
+C:/Ruby22-x64/lib/ruby/gems/2.2.0/gems/sass-3.4.13/lib/sass/plugin/compiler.rb:293:in `watch'
+C:/Ruby22-x64/lib/ruby/gems/2.2.0/gems/sass-3.4.13/lib/sass/plugin.rb:108:in `method_missing'
+C:/Ruby22-x64/lib/ruby/gems/2.2.0/gems/sass-3.4.13/lib/sass/exec/sass_scss.rb:381:in `watch_or_update'
+C:/Ruby22-x64/lib/ruby/gems/2.2.0/gems/sass-3.4.13/lib/sass/exec/sass_scss.rb:51:in `process_result'
+C:/Ruby22-x64/lib/ruby/gems/2.2.0/gems/sass-3.4.13/lib/sass/exec/base.rb:52:in `parse'
+C:/Ruby22-x64/lib/ruby/gems/2.2.0/gems/sass-3.4.13/lib/sass/exec/base.rb:19:in `parse!'
+C:/Ruby22-x64/lib/ruby/gems/2.2.0/gems/sass-3.4.13/bin/sass:13:in `<top (required)>'
+C:/Ruby22-x64/bin/sass:23:in `load'
+C:/Ruby22-x64/bin/sass:23:in `<main>'
+*/
+body:before {
+  white-space: pre;
+  font-family: monospace;
+  content: "Error: Invalid CSS after \"...erif !important\": expected expression (e.g. 1px, bold), was \";\"\A         on line 2 of common.css\A \A 1: html, body {\A 2:   font-family: \"Raleway\", sans-serif !important;\A 3:   font-size: 16px;\A 4:   font-weight: 300 !important;\A 5:   text-decoration: none !important;\A 6:   -webkit-font-smoothing: antialiased !important;\A 7:   background-color: #F2F1ED;"; }
